chore(header): use authentication service and add user object mapping

--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,10 @@
   -->
 </head>
 <body>
-  <angular-attack-app>Loading...</angular-attack-app>
+  <angular-attack-app>
+    <img src="/img/logo.png"/>
+    <h1>Amazing things come to those who wait...</h1>
+  </angular-attack-app>
 
   <script src="vendor/es6-shim/es6-shim.js"></script>
   <script src="vendor/reflect-metadata/Reflect.js"></script>
