chore(loader): fake progress ;)

--- a/src/index.html
+++ b/src/index.html
@@ -16,8 +16,9 @@
 <body>
   <angular-attack-app>
     <div class="landing-indicator">
+      <div class="overlay"></div>
       <img src="/img/logo-big.png"/>
-      <h1>Amazing things come to those who wait...</h1>
+      <h1>Please wait, while the application loads...</h1>
     </div>
   </angular-attack-app>
 
