--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,10 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.6/css/bootstrap.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.css">
   <link href='https://fonts.googleapis.com/css?family=Raleway:400,700' rel='stylesheet' type='text/css'>
+
+  <link rel="shortcut icon" href="/img/logo.png" type="image/png">
+  <link rel="icon" href="/img/logo.png" type="image/png">
+
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
