chore(index): add title

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>AngularAttack</title>
+  <title>Scrummingbird // Scrumify you GitHub</title>
   <base href="/">
   {{content-for 'head'}}
   <meta name="viewport" content="width=device-width, initial-scale=1">
