--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
     <div class="landing-indicator">
       <div class="overlay"></div>
       <img src="/img/logo-big.png"/>
-      <h1>Please wait, while the application loads...</h1>
+      <h1>Please wait, while the application is loading...</h1>
     </div>
   </angular-attack-app>
 
